vlib/v/checker/tests/arrow_op_wrong_left_type_err_a.vv
fn main() {
	ch := i64(3)
	obj := 5
	ch <- obj
}
